fixed board row spacing

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -23,20 +23,11 @@
 }
 
 .board {
-  width: 794px;
-  height: 800px;
+  width: 804px;
+  height: 804px;
   border: solid black 2px;
   margin: auto;
   margin-top: 35px;
-}
-
-.tile {
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  margin-bottom: -6.5px;
-  margin-right: -1px;
-  cursor: pointer;
 }
 
 .color-group {
